--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ notifications:
     on_start: change   # default: never
     on_cancel: always # default: always
     on_error: always # default: always
+cache:
+  directories:
+    - ~/.cache
+    - ~/.npm
 before_install: npm install -g npm@latest
 install:
   - npm ci
