--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:e2e:storybook": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook",
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:lighthouse": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start lighthouse",
-    "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook",
+    "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:unit": "razzle test --env=jsdom --coverage"
   },
   "repository": {
@@ -72,7 +72,8 @@
     "lighthouse": "^2.9.4",
     "npm-run-all": "^4.1.3",
     "prettier": "1.13.5",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "swagger-cli": "^2.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
