--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,27 @@ cache:
     - ~/.cache
     - ~/.npm
 before_install: npm install -g npm@latest
+install: 
+  - npm ci
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+script: npm run test
 after_script: ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
-
-install: 
-  - npm ci
-jobs:
-  include:
-    - stage: test
-      # before_script:
-      #   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      #   - chmod +x ./cc-test-reporter
-      #   - ./cc-test-reporter before-build
-      script: npm run test
-      #  after_script: ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
-    - stage: test
-      script: xvfb-run npm run test:e2e:ci
-    - stage: test
-      script: xvfb-run npm run test:e2e:storybook:ci
+# jobs:
+#   include:
+#     - stage: test
+#       before_script:
+#         - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+#         - chmod +x ./cc-test-reporter
+#         - ./cc-test-reporter before-build
+#       script: npm run test
+#       after_script: ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
+#     - stage: test
+#       script: xvfb-run npm run test:e2e:ci
+#     - stage: test
+#       script: xvfb-run npm run test:e2e:storybook:ci
 notifications:
   email: false
   slack:
