--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "dev": "razzle start",
-    "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view",
+    "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
     "precommit": "npm run test:lint",
     "prepush": "npm run test:unit",
     "speculate": "speculate",
