--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "npm-run-all": "^4.1.3",
     "prettier": "1.13.5",
     "supertest": "^3.1.0",
-    "swagger-cli": "^2.1.0"
+    "swagger-cli": "^2.1.0",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "jest": {
     "collectCoverageFrom": [
