--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
     - stage: test
       script: xvfb-run npm run test:e2e:storybook:ci
     - stage: deploy
-      script: npm run deploy-storybook -- --ci --source-branch=storybook-github
+      script: npm run deploy-storybook -- --ci
 notifications:
   email: false
   slack:
