--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ jobs:
     - stage: test
       script: xvfb-run npm run test:e2e:storybook:ci
     - stage: deploy
-      if: branch = latest && type = push
-      script: npm run deploy-storybook -- --ci --source-branch=latest
+      if: branch = latest
+      if: type = push
+      script: npm run deploy-storybook -- --ci
 notifications:
   email: false
   slack:
