--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
       script: xvfb-run npm run test:e2e:storybook:ci
     - stage: deploy
       if: type = push
-      before_script: build-storybook -c .storybook -o .out
+      before_script: npm install now --no-save && build-storybook -c .storybook -o .out
       script: cd .out && now simorgh.storybook --token $now_token && now alias simorgh.storybook --token $now_token
 notifications:
   email: false
