--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
-  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "extends": [
+    "airbnb",
+    "plugin:prettier/recommended",
+    "plugin:requirejs/recommended"
+  ],
   "env": {
     "es6": true,
     "browser": true,
@@ -14,5 +18,5 @@
       "jsx": true
     }
   },
-  "plugins": ["prettier", "json"],
+  "plugins": ["prettier", "json", "requirejs"]
 }
