--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,13 @@ jobs:
       before_script: npm install now --no-save
       script:
         - build-storybook -c .storybook -o .out
-        - now rm --safe simorgh
+        - now rm --token $now_token --safe simorghstorybook
         - now --token $now_token ./.out -A ../now.json && now alias --token $now_token simorghstorybook.now.sh
     - stage: test
       if: type = push
       before_script: npm install now --no-save
       script:
-        - now rm --safe simorgh
+        - now rm --token $now_token --safe simorgh
         - now --token $now_token && now alias --token $now_token simorgh.now.sh
 notifications:
   email: false
