--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@jaredpalmer/after": "^1.3.1",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.6.2",
     "razzle": "^2.2.0",
