--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ jobs:
     - stage: test
       script: xvfb-run npm run test:e2e:storybook:ci
     - stage: deploy
-      if: type = push AND branch = latest
+      if: type = push
       before_script: npm install now --no-save
       script:
         - build-storybook -c .storybook -o simorghstorybook
-        - now --token $now_token ./simorghstorybook --public && now alias --token $now_token
+        - now --token $now_token ./simorghstorybook -A ../.storybook/now.json --public && now alias --token $now_token -A ../.storybook/now.json
         - now rm -y --token $now_token --safe simorghstorybook
       after_script: now rm -y --token $now_token --safe simorghstorybook
   allow_failures:
