--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
       before_script: npm install now --no-save
       script:
         - build-storybook -c .storybook -o simorghstorybook
-        - now --token $now_token ./simorghstorybook -A ../.storybook/now.json --public && now alias --token $now_token -A ../.storybook/now.json
+        - now --token $now_token ./simorghstorybook --public && now alias --token $now_token
         - now rm -y --token $now_token --safe simorghstorybook
       after_script: now rm -y --token $now_token --safe simorghstorybook
   allow_failures:
