--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "airbnb",
-    "plugin:prettier/recommended",
-    "plugin:requirejs/recommended"
-  ],
+  "extends": ["airbnb", "plugin:prettier/recommended"],
   "env": {
     "es6": true,
     "browser": true,
@@ -18,5 +14,5 @@
       "jsx": true
     }
   },
-  "plugins": ["prettier", "json", "requirejs"]
+  "plugins": ["prettier", "json"]
 }
