--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.4.0",
     "speculate": "^1.7.4",
     "styled-components": "^3.3.2"
   },
@@ -69,9 +68,11 @@
     "eslint-plugin-prettier": "^2.6.0",
     "husky": "^0.14.3",
     "jest-fetch-mock": "^1.6.2",
+    "jest-styled-components": "^5.0.1",
     "lighthouse": "^2.9.4",
     "npm-run-all": "^4.1.3",
     "prettier": "1.13.6",
+    "react-test-renderer": "^16.4.0",
     "supertest": "^3.1.0",
     "swagger-cli": "^2.1.0"
   },
