--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
+    "data-validate": "node src/app/datavalidator.jsx",
     "dev": "razzle start",
     "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
     "precommit": "npm run test:lint",
@@ -26,7 +27,7 @@
     "test:lighthouse": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:unit": "razzle test --env=jsdom --coverage",
-    "test:unit:update-shapshots": "npm run test:unit -- -u"
+    "test:unit:update-shapshots": "npm run test:unit -- -u",
   },
   "repository": {
     "type": "git",
