--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
-    "@storybook/react": "^4.0.0-alpha.10",
+    "@storybook/react": "4.0.0-alpha.8",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
