--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
+    "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "dev": "razzle start",
     "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
     "precommit": "npm run test:lint",
@@ -21,6 +22,7 @@
     "test:e2e:interactive": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress:interactive",
     "test:e2e:storybook": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook",
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
+    "test:e2e:storybook:interactive": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook:interactive",
     "test:lighthouse": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:unit": "razzle test --env=jsdom --coverage"
