--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.0.0-beta.51",
     "@storybook/react": "4.0.0-alpha.11",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
