--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "dev": "razzle start",
     "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
-    "precommit": "npm run test:lint",
+    "precommit": "sh is-update-required.sh && npm run test:lint",
     "prepush": "sh is-update-required.sh && npm run test:unit",
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
