--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "razzle start",
     "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
     "precommit": "npm run test:lint",
-    "prepush": "upToDateWithLatest.sh && npm run test:unit",
+    "prepush": "./upToDateWithLatest.sh && npm run test:unit",
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
