--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
     "precommit": "npm run test:lint",
     "prepush": "npm run test:unit",
-    "postmerge": "npm install",
+    "postmerge": "./dependencyUpdateCheck.sh",
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
