--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-razzle": "^2.0.0",
     "cypress": "^3.0.2",
     "eslint": "^5.0.1",
     "eslint-config-airbnb": "^17.0.0",
