--- a/package.json
+++ b/package.json
@@ -127,6 +127,10 @@
     ],
     "setupFiles": [
       "./src/app/helpers/tests/jest-setup.js"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.js?(x)",
+      "**/?(*.)+(spec|test).js?(x)"
     ]
   }
 }
