--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/c9rpqy7pmypo.amp || true)",
     "bbcA11y": "bbc-a11y",
     "build": "razzle build",
+    "copyExamples": "node -r esm ./src/app/helpers/tests/copy-examples.js",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
@@ -99,9 +100,12 @@
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
+    "esm": "^3.0.84",
+    "fs-extra": "^7.0.1",
     "husky": "^1.1.3",
     "jest-fetch-mock": "^1.6.6",
     "jest-styled-components": "^6.2.2",
+    "jsx-to-string": "^1.4.0",
     "lighthouse": "^3.1.1",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.15.0",
