--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "brotli-webpack-plugin": "^1.0.0",
+    "chrome-launcher": "^0.10.5",
     "compression": "^1.7.3",
     "compression-webpack-plugin": "^2.0.0",
     "es6-promise": "^4.2.5",
