--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test:lighthouse": "npm run killApp && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
-    "test:unit": "razzle test --env=jsdom --coverage",
+    "test:unit": "razzle test --env=jsdom --coverage && jest src/app/helpers/",
     "updateSnapshots": "npm run test:unit -- -u"
   },
   "husky": {
