adds lighthouse pr and mocks chrome-launcher

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
       script:
         - npm run build
         - xvfb-run npm run test:prod:ci
+        - xvfb-run npm run test:lighthouse:ci
     - stage: deploy
       if: type = push AND branch = latest
       before_script: npm install now --no-save
