--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.0",
     "react-test-renderer": "^16.6.3",
+    "react-testing-library": "^5.3.1",
     "stylelint": "^9.7.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
