--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "homepage": "https://github.com/bbc-news/simorgh#readme",
   "dependencies": {
     "@bbc/psammead-headings": "^0.1.2",
+    "@bbc/psammead-sitewide-links": "^0.1.0",
     "@bbc/psammead-styles": "^0.1.1",
     "@bbc/psammead-visually-hidden-text": "^0.1.2",
     "babel-plugin-styled-components": "^1.7.1",
