--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=7080
 RAZZLE_BASE_PATH=http://localhost:7080
 RAZZLE_PUBLIC_DIR=build/public
 RAZZLE_PUBLIC_DIR_DEV=public
+TOGGLE_ENABLE_CLIENTSIDE_ROUTING=true
