--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
   },
   "homepage": "https://github.com/bbc-news/simorgh#readme",
   "dependencies": {
-    "@bbc/psammead-paragraph": "^0.1.3",
+    "@bbc/psammead-caption": "^0.1.0",
     "@bbc/psammead-headings": "^0.1.2",
     "@bbc/psammead-inline-link": "^0.1.0",
+    "@bbc/psammead-paragraph": "^0.1.3",
     "@bbc/psammead-styles": "^0.1.1",
     "@bbc/psammead-visually-hidden-text": "^0.1.2",
     "babel-plugin-styled-components": "^1.7.1",
