--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@bbc/psammead-sitewide-links": "^0.1.0",
     "@bbc/psammead-styles": "^0.1.1",
     "@bbc/psammead-visually-hidden-text": "^0.1.2",
-    "babel-plugin-styled-components": "^1.7.1",
+    "babel-plugin-styled-components": "^1.9.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "brotli-webpack-plugin": "^1.0.0",
@@ -93,7 +93,7 @@
     "styled-normalize": "^8.0.3"
   },
   "devDependencies": {
-    "@storybook/react": "4.0.0-alpha.8",
+    "@storybook/react": "4.1.2",
     "amphtml-validator": "^1.0.23",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.0",
@@ -102,7 +102,7 @@
     "chalk": "^2.4.1",
     "chrome-launcher": "^0.10.5",
     "core-js": "^2.6.0",
-    "cypress": "^3.1.1",
+    "cypress": "^3.1.3",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^3.3.0",
@@ -110,8 +110,8 @@
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^1.1.3",
-    "jest-fetch-mock": "^2.0.0",
+    "husky": "^1.2.1",
+    "jest-fetch-mock": "^2.1.0",
     "jest-styled-components": "^6.2.2",
     "lighthouse": "^3.2.1",
     "npm-run-all": "^4.1.5",
