--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "homepage": "https://github.com/bbc-news/simorgh#readme",
   "dependencies": {
+    "@bbc/gel-foundations": "^0.1.3",
     "@bbc/psammead-assets": "^0.1.3",
     "@bbc/psammead-brand": "^0.1.1",
     "@bbc/psammead-caption": "^0.1.0",
@@ -67,7 +68,7 @@
     "@bbc/psammead-inline-link": "^0.1.0",
     "@bbc/psammead-paragraph": "^0.1.3",
     "@bbc/psammead-sitewide-links": "^0.1.0",
-    "@bbc/psammead-styles": "^0.1.1",
+    "@bbc/psammead-styles": "^0.1.5",
     "@bbc/psammead-visually-hidden-text": "^0.1.2",
     "babel-plugin-styled-components": "^1.7.1",
     "babel-polyfill": "^6.26.0",
