--- a/.babelrc
+++ b/.babelrc
@@ -32,6 +32,7 @@
       }
     ],
     "babel-plugin-syntax-dynamic-import", // allows `await import()`
-    "babel-plugin-dynamic-import-node" // allows `return import()`
+    "babel-plugin-dynamic-import-node", // allows `return import()`
+    "transform-object-rest-spread" // allows ...spread notation
   ]
 }
