--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/c9rpqy7pmypo.amp || true)",
     "bbcA11y": "bbc-a11y",
-    "build": "webpack build",
+    "build": "export RAZZLE_BASE_PATH='http://localhost:7080' && webpack --env.production",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "dataValidate": "node src/app/dataValidator/index.js",
     "dataValidate:debug": "npm run dataValidate --DEBUG_MODE=true",
-    "dev": "webpack start",
+    "dev": "export RAZZLE_BASE_PATH='http://localhost:7080' && webpack",
     "killApp": "(lsof -t -i:7080 | xargs kill)",
     "killStorybook": "(lsof -t -i:9001 | xargs kill)",
     "lighthouse": "lighthouse http://localhost:7080/news/articles/c85pqyj5m2ko --output-path=./reports/report.html --view",
@@ -98,7 +98,7 @@
     "amphtml-validator": "^1.0.23",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-react": "^6.24.1",
@@ -122,6 +122,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.0",
     "react-test-renderer": "^16.6.3",
+    "start-server-webpack-plugin": "^2.2.5",
     "stylelint": "^9.7.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -130,6 +131,8 @@
     "swagger-cli": "^2.2.0",
     "wait-on": "^3.1.0",
     "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.5",
     "yaml-js": "^0.2.3"
   },
   "jest": {
