--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.12.0",
     "husky": "^1.1.3",
     "jest": "^23.6.0",
     "jest-fetch-mock": "^2.0.0",
