--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=7080
 BASE_URL=http://localhost:7080
 PUBLIC_DIR=build/public
 PUBLIC_DIR_DEV=public
+CI=false
+ASSETS_MANIFEST=public/manifest.json
