--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "stylelint-processor-styled-components": "^1.5.0",
     "supertest": "^3.3.0",
     "swagger-cli": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "wait-on": "^3.1.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
