--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "scripts": {
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/c9rpqy7pmypo.amp || true)",
     "bbcA11y": "bbc-a11y",
-    "build": "webpack --env.production",
+    "build": "export $(cat .env | xargs); webpack --env.production",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "dataValidate": "node src/app/dataValidator/index.js",
     "dataValidate:debug": "npm run dataValidate --DEBUG_MODE=true",
-    "dev": "webpack",
+    "dev": "export $(cat .env | xargs); webpack --env.startServer",
     "killApp": "(lsof -t -i:7080 | xargs kill)",
     "killStorybook": "(lsof -t -i:9001 | xargs kill)",
     "lighthouse": "lighthouse http://localhost:7080/news/articles/c85pqyj5m2ko --output-path=./reports/report.html --view",
     "speculate": "speculate",
-    "start": "NODE_ENV=production node build/server.js",
+    "start": "export $(cat .env | xargs); node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run dataValidate && npm run test:unit",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
@@ -32,7 +32,7 @@
     "test:lighthouse:ci": "npm run build && run-p --race start test:lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./scripts/lighthouse ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
-    "test:unit": "jest --env=jsdom --coverage",
+    "test:unit": "export $(cat .env | xargs); jest --env=jsdom --coverage",
     "updateSnapshots": "npm run test:unit -- -u"
   },
   "husky": {
@@ -107,7 +107,6 @@
     "chrome-launcher": "^0.10.5",
     "core-js": "^2.6.0",
     "cypress": "^3.1.1",
-    "dotenv": "^6.2.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^3.3.0",
